Fix: main section img on mobile

--- a/CSS-Grids/Huff-Post/layout.css
+++ b/CSS-Grids/Huff-Post/layout.css
@@ -88,13 +88,38 @@ body {
     .language-selection {
         display: none;
     }
-
+/* ------------------------------ */
     /* Main Section */
     .main-content-wrapper {
         grid-row: 2 / 8;
         grid-column: 1 / -1;
+        /* Styling */
+        background-size: cover;
+        background-position: 50% 50%;
+        width: 100%
+    }
+    .main-content-overlay {
+        background-color: rgba(0,0,0,0.4);
+        background: linear-gradient(to top, rgba(0,0,0,0.4), transparent 100%);
+    }
+    /* Main Section Headline H1 */
+    .main-content-h1-w {
+        text-align: center;
+    }
+    .main-content-h1 {
+        font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
+        color: white;
+        font-size: 3rem;
+        text-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+        margin-top: 4.5em;
+    }
+    .main-content-h1:hover {
+        cursor: pointer;
+        text-decoration: underline;
+        text-decoration-color: #0DBE98;
     }
 
+/* ------------------------------ */
     /* Section One - Left */
     .sec-1-left {
         grid-row: 8 / 14;
